# meta5tradingbot

./: .dockerignore  .env.example  .flake8  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
.github/workflows/: ci.yml
mql5/: README.md  TelegramBotEA.mq5
mql5/libs/: README.md
scripts/: build.sh  check_latency.sh  deploy.sh  install_deps.sh  install_services.sh  logs.sh
services/mt5-bridge/: CMakeLists.txt  Dockerfile  README.md
services/mt5-bridge/src/: OrderReceiver.cpp  OrderReceiver.hpp  TelegramNotifier.cpp  TelegramNotifier.hpp  TradeEvent.cpp  TradeEvent.hpp  TradeEventReceiver.cpp  TradeEventReceiver.hpp  TradeJournal.cpp  TradeJournal.hpp  main.cpp
services/mt5-bridge/systemd/: mt5-bridge.service
services/signal-parser/: CMakeLists.txt  README.md
services/signal-parser/src/: SignalParser.cpp  SignalParser.hpp  ZmqBridge.cpp  ZmqBridge.hpp  main.cpp
services/signal-parser/systemd/: signal-parser.service
services/tdlib-listener/: CMakeLists.txt  README.md
services/tdlib-listener/src/: TelegramClient.cpp  TelegramClient.hpp  ZmqPublisher.cpp  ZmqPublisher.hpp  main.cpp
services/tdlib-listener/systemd/: tdlib-listener.service
services/telegram-parser/: Dockerfile  requirements.txt  telegram_parser.py
services/telegram-parser/systemd/: telegram-parser.service
tests/: README.md  sample_signals.txt  test_parser.cpp  test_trade_events.cpp
